verdaccio-Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: verdaccio
  labels:
    app: verdaccio
spec:
  selector:
    name: verdaccio
  type: ClusterIP
  # Use headless service type in order to avoid invalid host errors at verdaccio pods
  clusterIP: None
  ports:
  - name: 4873-tcp
    port: 4873
    protocol: TCP
    targetPort: 4873
